# fof

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bot.py  deploy.sh  docker-compose.yml  main.py  pyproject.toml  stockpile_store.py  test_stockpile_store.py
.github/workflows/: docker-publish.yml
foxhole_buddy/: commands.py  tasks.py  theme.py
foxhole_buddy/catalog/: __init__.py  catalog.py  seed_catalog.json  sync.py
foxhole_buddy/core/: bot.py  models.py  store.py
foxhole_buddy/ui/: embeds.py  modals.py  views.py
foxhole_buddy/ui/views/: __init__.py  factory.py  inventory.py  logistics.py  menu.py  operations.py  regi.py  setup.py  stockpile.py  war.py
foxhole_buddy/utils/: formatting.py  foxhole_api.py
tests/: test_features.py  test_store.py
